Add basic listview with images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/slide1.jpg
+    - assets/slide2.jpg
+    - assets/slide3.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -73,7 +76,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Glory
+      fonts:
+        - asset: fonts/Glory-Regular.ttf
+        - asset: fonts/Glory-Bold.ttf
+          style: italic
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
